@@ -404,7 +404,9 @@ distributions {
                 into 'source/doc_src'
             }
             from('src') {
-                include 'org/omegat/Bundle.properties'
+                include 'org/omegat/Bundle.properties',
+                        'org/omegat/ColorScheme_light.properties',
+                        'org/omegat/ColorScheme_dark.properties'
                 into 'source/src'
             }
             from('release') {
