@@ -1,0 +1,43 @@
+# OmegaT default dark color scheme
+#
+# Format is 8-bit RGB or RGBA in hexadecimal (like standard HTML colors)
+OmegaT.activeSource=#287128
+OmegaT.source=#82b682
+OmegaT.noted=#a0c0c0
+OmegaT.untranslated=#4d4daa
+OmegaT.translated=#57572e
+OmegaT.nonUnique=#808080
+OmegaT.placeholder=#969696
+OmegaT.removeTextTarget=#ff0000
+OmegaT.nbsp=#c8c8c8
+OmegaT.whiteSpace=#808080
+OmegaT.bidiMarkers=#c80000
+OmegaT.paragraphStart=#aeaeae
+OmegaT.markComesFromTm=#fa8072
+OmegaT.markComesFromTmXice=#af76df
+OmegaT.markComesFromTmX100pc=#ff9408
+OmegaT.markComesFromTmXauto=#ffd596
+OmegaT.markComesFromTmXenforced=#ffccff
+OmegaT.replace=#0000ff
+OmegaT.languageTools=#0000ff
+OmegaT.transTips=#0000ff
+OmegaT.spellCheck=#ff0000
+OmegaT.terminology=#ffa500
+OmegaT.matchesChanged=#0000ff
+OmegaT.matchesUnchanged=#00ff00
+OmegaT.matchesInsActive=#0000ff
+OmegaT.matchesInsInactive=#808080
+OmegaT.hyperlink=#0000ff
+OmegaT.searchFoundMark=#0000ff
+OmegaT.searchReplaceMark=#ff9900
+OmegaT.notificationMin=#fff2d4
+OmegaT.notificationMax=#ff9900
+OmegaT.alignerAccepted=#15bb45
+OmegaT.alignerNeedsReview=#ff0000
+OmegaT.alignerHighlight=#ffff00
+OmegaT.alignerTableRowHighlight=#c8c8c8
+OmegaT.projectFilesCurrentFileForeground=#000000
+OmegaT.projectFilesCurrentFileBackground=#c8ddf2
+OmegaT.searchFieldErrorText=#7f0000
+OmegaT.searchDimmedBackground=#80808080
+OmegaT.searchResultBorder=#EED20080
