@@ -1,0 +1,43 @@
+# OmegaT default light color scheme
+#
+# Format is 8-bit RGB or RGBA in hexadecimal (like standard HTML colors)
+OmegaT.activeSource=#c0ffc0
+OmegaT.source=#c0ffc0
+OmegaT.noted=#c0ffff
+OmegaT.untranslated=#c0ffc0
+OmegaT.translated=#ffff99
+OmegaT.nonUnique=#808080
+OmegaT.placeholder=#969696
+OmegaT.removeTextTarget=#ff0000
+OmegaT.nbsp=#c8c8c8
+OmegaT.whiteSpace=#808080
+OmegaT.bidiMarkers=#c80000
+OmegaT.paragraphStart=#aeaeae
+OmegaT.markComesFromTm=#fa8072
+OmegaT.markComesFromTmXice=#af76df
+OmegaT.markComesFromTmX100pc=#ff9408
+OmegaT.markComesFromTmXauto=#ffd596
+OmegaT.markComesFromTmXenforced=#ffccff
+OmegaT.replace=#0000ff
+OmegaT.languageTools=#0000ff
+OmegaT.transTips=#0000ff
+OmegaT.spellCheck=#ff0000
+OmegaT.terminology=#ff6600
+OmegaT.matchesChanged=#0000ff
+OmegaT.matchesUnchanged=#00ff00
+OmegaT.matchesInsActive=#0000ff
+OmegaT.matchesInsInactive=#808080
+OmegaT.hyperlink=#0000ff
+OmegaT.searchFoundMark=#0000ff
+OmegaT.searchReplaceMark=#ff9900
+OmegaT.notificationMin=#fff2d4
+OmegaT.notificationMax=#ff9900
+OmegaT.alignerAccepted=#15bb45
+OmegaT.alignerNeedsReview=#ff0000
+OmegaT.alignerHighlight=#ffff00
+OmegaT.alignerTableRowHighlight=#c8c8c8
+OmegaT.projectFilesCurrentFileForeground=#000000
+OmegaT.projectFilesCurrentFileBackground=#c8ddf2
+OmegaT.searchFieldErrorText=#ff0000
+OmegaT.searchDimmedBackground=#80808080
+OmegaT.searchResultBorder=#EED20080
