@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 5.4.0
 ----------------------------------------------------------------------
-  3 Enhancements
+  4 Enhancements
   5 Bug fixes
   0 Localisation updates
 ----------------------------------------------------------------------
@@ -18,6 +18,9 @@
   - XLIFF: update target tag's state attribute according to
     translation status
   https://sourceforge.net/p/omegat/feature-requests/1506/
+
+  - Externalize default color definitions
+  https://sourceforge.net/p/omegat/feature-requests/1514/
 
   Bug fixes:
 
